force-app/main/default/objects/LicenseTypeMapping__c/LicenseTypeMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PacPoint: RdG - Case# 8722 - For PVL Phase 1 - License Type Mapping</description>
    <label>License Type Mapping</label>
</CustomObject>