force-app/main/default/objects/LicenseTypeMapping__c/fields/BoardProgramName__c.field-meta.xml
<CustomField>
    <fullName>BoardProgramName__c</fullName>
    <description>PacPoint: RdG - Case# - For PVL Phase 1 - License Type Mapping</description>
    <label>Board Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>