force-app/main/default/objects/LicenseTypeMapping__c/fields/ChangeLicenseRecordTypeTo__c.field-meta.xml
<CustomField>
    <fullName>ChangeLicenseRecordTypeTo__c</fullName>
    <description>PacPoint: RdG - Case# - For PVL Phase 1 - License Type Mapping</description>
    <label>Change License Record Type To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>