force-app/main/default/objects/LicenseTypeMapping__c/fields/LicenseTypeCode__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypeCode__c</fullName>
    <description>PacPoint: RdG - Case# - For PVL Phase 1 - License Type Mapping</description>
    <label>License Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>